ollama-eks/k8s-config/cpu-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama-cpu-deployment

spec:
  replicas: 3
  selector:
    matchLabels:
      app: ollama-cpu-deployment
  template:
    metadata:
      labels:
        app: ollama-cpu-deployment
    spec:
      containers:
        - name: ollama-cpu-deployment
          image: ollama/ollama:latest
          ports:
            - containerPort: 11434
          resources:
            requests:
              memory: "4Gi"
              cpu: "1"
            limits:
              memory: "8Gi"
              cpu: "2"
          lifecycle:
            postStart:
              exec:
                command: ["ollama", "pull", "deepseek-r1:1.5b"]
      tolerations:
        - key: "node-type"
          operator: Equal
          value: "cpu"
          effect: "NoSchedule"
