ollama-eks/k8s-config/cpu-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ollama-cpu-service
spec:
  type: ClusterIP
  selector:
    app: ollama-cpu-deployment
  ports:
    - protocol: TCP
      port: 11434
      targetPort: 11434
